<resources>
    <string name="app_name">PeopleFinder</string>
    <string name="facebook_app_id">488741768164674</string>
    <string name="fb_login_protocol_scheme">fb488741768164674</string>

    <!--https://console.developers.google.com/apis/credentials?project=peoplefinder-183820&authuser=0-->
    <string name="google_maps_key">AIzaSyB6gPzrKk5v4SX-5zO5yDubOurgr_gSTkc</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="main_permissions_explanation">You must grant permission on Location. Without it application does not have a sense.</string>
    <string name="grant_permissions">Grant permissions</string>


    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="edit">Edit</string>

    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_conformation">Confirmation</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_log_in_short">Sign in</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_password">Password required</string>
    <string name="error_invalid_confirmation_password">Confirmation password required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_wrong_data">Wrong data</string>
    <string name="error_account_not_exists">Account does not exists</string>
    <string name="error_authentication_failed">Authentication failed</string>
    <string name="error_account_already_exists">Account already exists</string>
    <string name="error_name_already_exists">Name already exists</string>

    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>

    <string name="mes_service_work">Your location detect in current moment</string>

    <!-- SETTINGS -->
    <string name="settings_rate_location">Frequency of get my location %1$s seconds</string>
    <string name="settings_rate_smaller">Bad for battery</string>
    <string name="settings_rate_bigger">Good for battery</string>
    <string name="settings_show_old_person">Show old info about person</string>
    <string name="settings_provider_title">Provider for define the location</string>
    <string name="settings_provider_gps">GPS</string>
    <string name="settings_provider_network">Network</string>
    <string name="settings_of_map">Settings of map</string>
    <string name="settings_zoom_button">Zoom button</string>
    <string name="settings_compass">Compass</string>
    <string name="settings_my_location_button">My location button</string>
    <string name="settings_tilt_gestures">Tilt gestures</string>
    <string name="settings_rotate_gestures">Rotate gestures</string>
    <string name="settings_enable_locationservice">Enable LocationService</string>

    <string name="mark_manual_location">Manual location</string>
    <string name="mark_current_location">Current location</string>
    <string name="mark_name_of_place">Name of place</string>
    <string name="mark_direction_from_you">to %1$s from you</string>
    <string name="mark_saved">Mark has saved</string>
    <string name="mark_removed">Mark has removed</string>

    <string name="map_it_is_you">It\'s You</string>
    <string name="map_request_for_new_mark">Create new place?</string>

    <!-- MENU -->
    <string name="menu_map">Map</string>
    <string name="menu_new_mark">New Mark</string>
    <string name="menu_all_mark">All marks</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign out</string>

    <!-- TITLES OF SCREENS-->
    <string name="title_edit_mark">Edit mark</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="title_logs">Logs</string>
    <string name="title_all_marks">All marks</string>
</resources>
