<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.gek.peoplefinder.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                style="@style/ItemSettings">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/settings_provider_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/rbGps"
                        android:text="@string/settings_provider_gps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/rbNetwork"
                        android:text="@string/settings_provider_network"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"/>
                </RadioGroup>

            </LinearLayout>

            <include layout="@layout/horizontal_line"/>

            <LinearLayout
                style="@style/ItemSettings">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvStateRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_rate_location"/>
                </LinearLayout>

                <SeekBar
                    android:id="@+id/sbRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="8"
                    android:progress="4"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_rate_smaller"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:gravity="right"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_rate_bigger"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            <include layout="@layout/horizontal_line"/>

            <LinearLayout
                style="@style/ItemSettings">
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchOldPerson"
                    style="@style/SettingsSwitch"
                    android:text="@string/settings_show_old_person" />
            </LinearLayout>

            <include layout="@layout/horizontal_line"/>

            <LinearLayout
                style="@style/ItemSettings">
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchServiceEnable"
                    style="@style/SettingsSwitch"
                    android:text="@string/settings_enable_locationservice" />
            </LinearLayout>

            <include layout="@layout/horizontal_line"/>

            <LinearLayout
                style="@style/ItemSettings">

                <TextView
                    android:text="@string/settings_of_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchZoomButtons"
                    style="@style/SettingsSwitch"
                    android:text="@string/settings_zoom_button" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchCompass"
                    style="@style/SettingsSwitch"
                    android:text="@string/settings_compass" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchMyLocationButton"
                    style="@style/SettingsSwitch"
                    android:text="@string/settings_my_location_button" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchTiltGestures"
                    style="@style/SettingsSwitch"
                    android:text="@string/settings_tilt_gestures" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchRotateGestures"
                    style="@style/SettingsSwitch"
                    android:text="@string/settings_rotate_gestures" />

            </LinearLayout>

            <include layout="@layout/horizontal_line"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
